echo_service/3-echo-ingress-tls-cert.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo11-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - echo11.ostrike.com
    secretName: letsencrypt-prod
  rules:
  - host: echo11.ostrike.com
    http:
      paths:
      - backend:
          serviceName: echo11
          servicePort: 80
#  - host: echo2.example.com
#    http:
#      paths:
#      - backend:
#          serviceName: echo2
#          servicePort: 80
